Finished setting structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- python -m SimpleHTTPServer -->
+
 <!DOCTYPE html>
 <html>
 
@@ -42,9 +44,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-        <div class="blog__entry__image">
-          <img src="images_src/horses.jpg">
-        </div>
+          <img class="blog__entry--image" src="images_src/horses.jpg">
         <div class="blog__entry--text">
           <p>
             Bocconcini swiss cut the cheese. Manchego boursin smelly cheese cheesy grin squirty cheese mozzarella cheddar hard cheese.
@@ -60,9 +60,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-        <div class="blog__entry__image">
-          <img src="images_src/volt.jpg">
-        </div>
+          <img class="blog__entry--image" src="images_src/volt.jpg">
         <div class="blog__entry--text">
           <p>
             Edam parmesan smelly cheese. Dolcelatte say cheese cheesy feet lancashire cow boursin stinking bishop brie. Stilton cheese
@@ -72,9 +70,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-        <div class="blog__entry__image">
-          <img src="images_src/cockatoos.jpg">
-        </div>
+          <img class="blog__entry--image" src="images_src/cockatoos.jpg">
         <div class="blog__entry--text">
           <p>
             Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy
@@ -99,9 +95,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-        <div class="blog__entry__image">
-          <img src="images_src/postcard.jpg">
-        </div>
+          <img class="blog__entry--image" src="images_src/postcard.jpg">
         <div class="blog__entry--text">
           <p>Pecorino pepper jack cheesy feet. Smelly cheese cauliflower cheese fromage halloumi cream cheese who moved my cheese
             fromage fondue. Feta danish fontina cheesy grin mozzarella fromage cheesy grin airedale paneer. Cheddar halloumi
@@ -110,9 +104,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <div class="blog__entry__image">
-          <img src="images_src/grasshopper.jpg">
-          </div>
+            <img class="blog__entry--image" src="images_src/grasshopper.jpg">
           <div class="blog__entry--text">
           <p>
             Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy
@@ -122,9 +114,7 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <div class="blog__entry__image">
-        <img src="images_src/sfo.jpg">
-        </div>
+            <img class="blog__entry--image" src="images_src/sfo.jpg">
         <div class="blog__entry--text">
         <p>
           Say cheese swiss cheesy grin. Cheese on toast queso bocconcini cheeseburger fondue manchego smelly cheese port-salut. Cream
@@ -133,9 +123,7 @@
       </div>
     </article>
     <article class="blog__entry global-display">
-        <div class="blog__entry__image">
-        <img src="images_src/rosella.jpg">
-        </div>
+          <img class="blog__entry--image" src="images_src/rosella.jpg">
         <div class="blog__entry--text">
         <p>
           Paneer st. agur blue cheese bocconcini. The big cheese chalk and cheese cheese and biscuits cream cheese cheese triangles
