Added <picture> & <figure> tags

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 <body>
   <header>
-    <img src="images_src/still_life.jpg" style="height: 80px;">
-    My responsive blog
+    <img src="images_src/still_life.jpg" style="height: 80px;"> My responsive blog
   </header>
   <main>
     <section class="blog global-display">
@@ -44,7 +43,12 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <img class="blog__entry--image" src="images_src/horses.jpg">
+        <picture>
+          <figure>
+            <img class="blog__entry--image" src="images_src/horses.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
           <p>
             Bocconcini swiss cut the cheese. Manchego boursin smelly cheese cheesy grin squirty cheese mozzarella cheddar hard cheese.
@@ -60,7 +64,12 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <img class="blog__entry--image" src="images_src/volt.jpg">
+        <picture>
+          <figure>
+            <img class="blog__entry--image" src="images_src/volt.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
           <p>
             Edam parmesan smelly cheese. Dolcelatte say cheese cheesy feet lancashire cow boursin stinking bishop brie. Stilton cheese
@@ -70,7 +79,12 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <img class="blog__entry--image" src="images_src/cockatoos.jpg">
+        <picture>
+          <figure>
+            <img class="blog__entry--image" src="images_src/cockatoos.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
           <p>
             Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy
@@ -95,7 +109,12 @@
         </div>
       </article>
       <article class="blog__entry global-display">
-          <img class="blog__entry--image" src="images_src/postcard.jpg">
+        <picture>
+          <figure>
+            <img class="blog__entry--image" src="images_src/postcard.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
           <p>Pecorino pepper jack cheesy feet. Smelly cheese cauliflower cheese fromage halloumi cream cheese who moved my cheese
             fromage fondue. Feta danish fontina cheesy grin mozzarella fromage cheesy grin airedale paneer. Cheddar halloumi
@@ -104,8 +123,13 @@
         </div>
       </article>
       <article class="blog__entry global-display">
+        <picture>
+          <figure>
             <img class="blog__entry--image" src="images_src/grasshopper.jpg">
-          <div class="blog__entry--text">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
+        <div class="blog__entry--text">
           <p>
             Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy
             grin swiss cheese strings paneer lancashire cauliflower cheese cheese on toast caerphilly. Queso queso cheese
@@ -114,24 +138,35 @@
         </div>
       </article>
       <article class="blog__entry global-display">
+        <picture>
+          <figure>
             <img class="blog__entry--image" src="images_src/sfo.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
-        <p>
-          Say cheese swiss cheesy grin. Cheese on toast queso bocconcini cheeseburger fondue manchego smelly cheese port-salut. Cream
-          cheese cheese and wine airedale cheeseburger chalk and cheese cauliflower cheese fondue smelly cheese. Queso manchego.
-        </p>
-      </div>
-    </article>
-    <article class="blog__entry global-display">
-          <img class="blog__entry--image" src="images_src/rosella.jpg">
+          <p>
+            Say cheese swiss cheesy grin. Cheese on toast queso bocconcini cheeseburger fondue manchego smelly cheese port-salut. Cream
+            cheese cheese and wine airedale cheeseburger chalk and cheese cauliflower cheese fondue smelly cheese. Queso
+            manchego.
+          </p>
+        </div>
+      </article>
+      <article class="blog__entry global-display">
+        <picture>
+          <figure>
+            <img class="blog__entry--image" src="images_src/rosella.jpg">
+            <figcaption>Test Caption</figcaption>
+          </figure>
+        </picture>
         <div class="blog__entry--text">
-        <p>
-          Paneer st. agur blue cheese bocconcini. The big cheese chalk and cheese cheese and biscuits cream cheese cheese triangles
-          mascarpone everyone loves rubber cheese. Stinking bishop manchego the big cheese lancashire hard cheese the big
-          cheese danish fontina squirty cheese. Cheesy feet croque monsieur boursin squirty cheese cheddar boursin boursin
-          pepper jack. Squirty cheese halloumi camembert de normandie macaroni cheese.
-        </p>
-      </div>
+          <p>
+            Paneer st. agur blue cheese bocconcini. The big cheese chalk and cheese cheese and biscuits cream cheese cheese triangles
+            mascarpone everyone loves rubber cheese. Stinking bishop manchego the big cheese lancashire hard cheese the big
+            cheese danish fontina squirty cheese. Cheesy feet croque monsieur boursin squirty cheese cheddar boursin boursin
+            pepper jack. Squirty cheese halloumi camembert de normandie macaroni cheese.
+          </p>
+        </div>
       </article>
     </section>
   </main>
