--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <header>
-    <img src="images_src/still_life.jpg" style="height: 80px;"> My responsive blog
+    <img src="images/images_src/fixed/still_life-600_small.jpg" style="height: 80px;"> My responsive blog
   </header>
   <main>
     <section class="blog global-display">
@@ -45,7 +45,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/horses.jpg">
+            <img class="blog__entry--image" src="images/horses-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -66,7 +66,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/volt.jpg">
+            <img class="blog__entry--image" src="images/volt-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -81,7 +81,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/cockatoos.jpg">
+            <img class="blog__entry--image" src="images/cockatoos-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -111,7 +111,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/postcard.jpg">
+            <img class="blog__entry--image" src="images/postcard-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -125,7 +125,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/grasshopper.jpg">
+            <img class="blog__entry--image" src="images/grasshopper-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -140,7 +140,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/sfo.jpg">
+            <img class="blog__entry--image" src="images/sfo-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
@@ -155,7 +155,7 @@
       <article class="blog__entry global-display">
         <picture>
           <figure>
-            <img class="blog__entry--image" src="images_src/rosella.jpg">
+            <img class="blog__entry--image" src="images/rosella-600_small.jpg">
             <figcaption>Test Caption</figcaption>
           </figure>
         </picture>
