--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
   <meta name="description" content="Udacity Responsive Images course project" />
-  <meta name="author" content="//samdutton.com">
+  <meta name="author" content="https://github.com/mrcreel">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta charset="utf-8">
   <meta itemprop="name" content="Udacity Responsive Images course project">
-  <meta itemprop="image" content="images/icon.png">
+  <link rel="icon" type="image/png" href="icons/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
   <meta id="theme-color" name="theme-color" content="#307699">
 
@@ -35,6 +35,10 @@
       background-color: white;
       font-size: 18px;
       line-height: 1.2em;
+    }
+
+    figure {
+      margin: auto;
     }
 
     footer {
