--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- python -m SimpleHTTPServer -->
+<!--
+  python -m SimpleHTTPServer
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -85,28 +87,35 @@
   </style>
   <style>
     /* zocial */
-
     @import url(http://weloveiconfonts.com/api/?family=zocial);
     [class*="zocial-"]:before {
       font-family: 'zocial', sans-serif;
     }
   </style>
-
 </head>
 
 <header class="global-display">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Cheese.svg" alt="still life" style="height: 80px;">
-  <h1>My responsive blog</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Cheese.svg" alt="cheese header" style="height: 80px; width: 20%;">
+  <h1 style="width: 80%">My responsive blog</h1>
   <!-- By Olivier Grisel <olivier.grisel@ensta.org> [Public domain], from Wikimedia Commons -->
 </header>
 
 <body>
+
   <main>
     <section class="blog global-display">
       <article class="blog__entry global-display card">
-        <div class="blog__entry--headline">
-          <h2>My story</h2>
-        </div>
+          <div class="blog__entry--headline" style="width: 100%; ">
+              <h2 style="text-align: center;">My story</h2>
+          </div>
+          <figure>
+              <picture>
+                  <source media="(max-width: 549px)" srcset="images/still_life-600_small.jpg">
+                	<source media="(min-width: 550px)" srcset="images/still_life-1000_large.jpg">
+                <img class="blog__entry--image" src="images/still_life-600_small.jpg" alt="still life">
+              </picture>
+              <figcaption>Horses</figcaption>
+            </figure>
         <div class="blog__entry--text">
           <p>
             I love cheese, especially manchego swiss. 😎 Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie
@@ -119,6 +128,7 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+              horses
             <img class="blog__entry--image" src="images/horses-600_small.jpg" alt="horses">
           </picture>
           <figcaption>Horses</figcaption>
@@ -244,8 +254,8 @@
       </article>
     </section>
   </main>
-  <footer class="global-display">
 
+  <footer class="global-display">
     <div class="global-display" style="margin: 1em 0; width: 100%;">
       <div class="global-display" style="width: 25%;">
         <a href="#" class="zocial zocial-twitter" title="twitter" id="twitter_link"></a>
@@ -264,8 +274,8 @@
       <a href="//github.com/udacity/responsive-images/tree/master/project/start" title="View source for this page on GitHub" style="margin: auto;"
         id="viewSource">View source for this page on GitHub</a>
     </div>
-
   </footer>
+
 </body>
 
 </html>
