--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </style>
   <style>
     /* zocial */
+
     @import url(http://weloveiconfonts.com/api/?family=zocial);
     [class*="zocial-"]:before {
       font-family: 'zocial', sans-serif;
@@ -95,7 +96,7 @@
 </head>
 
 <header class="global-display">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Cheese.svg" alt="cheese header" style="height: 80px; width: 20%;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Cheese.svg" alt="cheese header" style="height: 80px; width: 20%;">
   <h1 style="width: 80%">My responsive blog</h1>
   <!-- By Olivier Grisel <olivier.grisel@ensta.org> [Public domain], from Wikimedia Commons -->
 </header>
@@ -105,17 +106,17 @@
   <main>
     <section class="blog global-display">
       <article class="blog__entry global-display card">
-          <div class="blog__entry--headline" style="width: 100%; ">
-              <h2 style="text-align: center;">My story</h2>
-          </div>
-          <figure>
-              <picture>
-                  <source media="(max-width: 549px)" srcset="images/still_life-600_small.jpg">
-                	<source media="(min-width: 550px)" srcset="images/still_life-1000_large.jpg">
-                <img class="blog__entry--image" src="images/still_life-600_small.jpg" alt="still life">
-              </picture>
-              <figcaption>Horses</figcaption>
-            </figure>
+        <div class="blog__entry--headline" style="width: 100%; ">
+          <h2 style="text-align: center;">My story</h2>
+        </div>
+        <figure>
+          <picture>
+            <source media="(max-width: 549px)" srcset="images/still_life-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/still_life-1000_large.jpg">
+            <img class="blog__entry--image" src="images/still_life-600_small.jpg" alt="still life">
+          </picture>
+          <figcaption>Horses</figcaption>
+        </figure>
         <div class="blog__entry--text">
           <p>
             I love cheese, especially manchego swiss. 😎 Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie
@@ -128,7 +129,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
-              horses
+            <source media="(max-width: 549px)" srcset="images/horses-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/horses-1000_large.jpg">
             <img class="blog__entry--image" src="images/horses-600_small.jpg" alt="horses">
           </picture>
           <figcaption>Horses</figcaption>
@@ -150,6 +152,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/volt-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/volt-1000_large.jpg">
             <img class="blog__entry--image" src="images/volt-600_small.jpg" alt="volt">
           </picture>
           <figcaption>Test Caption</figcaption>
@@ -165,6 +169,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/cockatoos-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/cockatoos-1000_large.jpg">
             <img class="blog__entry--image" src="images/cockatoos-600_small.jpg" alt="cockatoos">
           </picture>
           <figcaption>Test Caption</figcaption>
@@ -195,6 +201,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/postcard-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/postcard-1000_large.jpg">
             <img class="blog__entry--image" src="images/postcard-600_small.jpg" alt="postcard">
           </picture>
           <figcaption>Test Caption</figcaption>
@@ -209,6 +217,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/grasshopper-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/grasshopper-1000_large.jpg">
             <img class="blog__entry--image" src="images/grasshopper-600_small.jpg" alt="grasshopper">
           </picture>
           <figcaption>Test Caption</figcaption>
@@ -224,6 +234,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/sfo-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/sfo-1000_large.jpg">
             <img class="blog__entry--image" src="images/sfo-600_small.jpg" alt="sfo">
           </picture>
           <figcaption>Test Caption</figcaption>
@@ -239,6 +251,8 @@
       <article class="blog__entry global-display card">
         <figure>
           <picture>
+            <source media="(max-width: 549px)" srcset="images/rosella-600_small.jpg">
+            <source media="(min-width: 550px)" srcset="images/rosella-1000_large.jpg">
             <img class="blog__entry--image" src="images/rosella-600_small.jpg" alt="rosella">
           </picture>
           <figcaption>Test Caption</figcaption>
